Revert "Add utils module, CI workflow, tests, and Tailwind build config"

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Aplicación para gestionar ventas de tenis en la tienda CyJ">
-    <meta property="og:title" content="Venta de Tenis - CyJ">
-    <meta property="og:description" content="Aplicación para gestionar ventas de tenis en la tienda CyJ">
-    <meta property="og:image" content="banner.jpg">
     <title>Venta de Tenis - CyJ</title>
-    <link rel="canonical" href="https://teniscarmen.example.com/">
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
