--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="app-container" class="container mx-auto p-4 md:p-6 max-w-7xl hidden">
         <!-- Header -->
         <header class="mb-6">
-            <img src="banner.jpg" alt="Banner de venta de tenis" class="w-full h-32 md:h-48 object-cover rounded-xl shadow-xl" onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg+no+encontrado';">
+            <img src="banner.jpg" alt="Banner de venta de tenis" class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow-xl" onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg+no+encontrado';">
             <div class="mt-4 flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center space-x-4">
                     <img src="logo.png" alt="Logotipo" class="w-16 h-16 object-contain" onerror="this.onerror=null;this.src='https://placehold.co/64x64/e2e8f0/64748b?text=Logo';">
