--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                  <div class="flex flex-col md:flex-row justify-between items-center gap-4">
                     <div class="relative w-full md:w-1/2">
                          <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"><i class="fas fa-search"></i></span>
-                        <input type="text" id="searchVentas" placeholder="Buscar por cliente o artículo..." class="w-full p-3 pl-10 pr-10 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <input type="text" id="searchVentas" placeholder="Buscar por cliente, artículo o SKU..." class="w-full p-3 pl-10 pr-10 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
                         <button id="clearSearchVentas" class="search-clear-btn hidden" title="Limpiar búsqueda"><i class="fas fa-times-circle"></i></button>
                     </div>
                     <button id="openVentaModalBtn" class="w-full md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0">
@@ -166,7 +166,7 @@
                  <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-4">
                     <div class="relative w-full md:w-1/2">
                         <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"><i class="fas fa-search"></i></span>
-                        <input type="text" id="searchInventario" placeholder="Buscar por modelo o marca..." class="w-full p-3 pl-10 pr-10 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <input type="text" id="searchInventario" placeholder="Buscar por modelo, marca o SKU..." class="w-full p-3 pl-10 pr-10 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
                         <button id="clearSearchInventario" class="search-clear-btn hidden" title="Limpiar búsqueda"><i class="fas fa-times-circle"></i></button>
                     </div>
                     <button id="openInventarioModalBtn" class="w-full md:w-auto bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0">
@@ -345,6 +345,7 @@
                         <datalist id="marcasList"></datalist>
                         <input type="text" id="inventarioModelo" placeholder="Modelo (Ej. AIR FORCE 1)" class="w-full p-3 border border-gray-300 rounded-lg uppercase" required>
                     </div>
+<input type="text" id="inventarioSku" placeholder="Código SKU" class="w-full p-3 border border-gray-300 rounded-lg uppercase">
                     <div class="flex items-center space-x-2">
                         <input type="text" id="inventarioTalla" placeholder="Talla" class="w-full p-3 border border-gray-300 rounded-lg uppercase" required>
                         <select id="inventarioTallaTipo" class="w-full p-3 border border-gray-300 rounded-lg" required>
