feat(inventario): mostrar cantidad de productos

--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
 
                 <div class="bg-indigo-600 text-white p-4 rounded-xl shadow-lg flex justify-between items-center">
                     <h3 class="text-lg font-bold">Valor Total del Inventario Disponible:</h3>
-                    <p id="valor-total-inventario" class="text-2xl font-bold">Calculando...</p>
+                    <div class="text-right">
+                        <p id="valor-total-inventario" class="text-2xl font-bold">Calculando...</p>
+                        <p id="cantidad-total-productos" class="text-sm">Calculando...</p>
+                    </div>
                 </div>
 
                 <div class="bg-white p-4 rounded-xl shadow-md border">
