--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aplicación para gestionar ventas de tenis en la tienda CyJ">
-    <title>Venta de Tenis - CyJ</title>
+    <meta name="description" content="Aplicación para gestionar ventas de tenis, ropa y accesorios en la tienda CyJ">
+    <title>Venta de Productos - CyJ</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -52,7 +52,7 @@
     <div id="login-screen" class="fixed inset-0 bg-gray-100 z-40 flex items-center justify-center hidden">
         <div class="text-center p-8 bg-white shadow-2xl rounded-xl max-w-sm w-full">
              <img src="logo.png" alt="Logotipo" class="w-24 h-24 mx-auto mb-4" onerror="this.onerror=null;this.src='https://placehold.co/96x96/e2e8f0/64748b?text=Logo';">
-            <h1 class="text-2xl font-bold text-gray-800 mt-4">Venta de Tenis</h1>
+            <h1 class="text-2xl font-bold text-gray-800 mt-4">Venta de Productos</h1>
             <p class="text-gray-500 mb-8">  Carmen y Juan Ramón</p>
             <button id="loginBtn" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-4 rounded-lg shadow-md flex items-center justify-center transition-colors">
                 <i class="fab fa-google text-xl mr-3"></i>
@@ -65,12 +65,12 @@
     <div id="app-container" class="container mx-auto p-4 md:p-6 max-w-7xl hidden">
         <!-- Header -->
         <header class="mb-6">
-            <img src="banner.jpg" alt="Banner de venta de tenis" class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow-xl" onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg+no+encontrado';">
+            <img src="banner.jpg" alt="Banner de venta" class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow-xl" onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg+no+encontrado';">
             <div class="mt-4 flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center space-x-4">
                     <img src="logo.png" alt="Logotipo" class="w-16 h-16 object-contain" onerror="this.onerror=null;this.src='https://placehold.co/64x64/e2e8f0/64748b?text=Logo';">
                     <div>
-                        <h1 class="text-3xl font-bold text-gray-900">Venta de Tenis</h1>
+                        <h1 class="text-3xl font-bold text-gray-900">Venta de Productos</h1>
                         <p class="text-base text-gray-500">Carmen y Juan Ramón</p>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         <button id="clearSearchInventario" class="search-clear-btn hidden" title="Limpiar búsqueda"><i class="fas fa-times-circle"></i></button>
                     </div>
                     <button id="openInventarioModalBtn" class="w-full md:w-auto bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0">
-                        <i class="fas fa-plus mr-2"></i>Agregar Tenis
+                        <i class="fas fa-plus mr-2"></i>Agregar Producto
                     </button>
                 </div>
 
@@ -183,11 +183,20 @@
                 </div>
 
                 <div class="bg-white p-4 rounded-xl shadow-md border">
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-4">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-4">
                         <!-- Filtros -->
                         <div>
                             <label for="filterMarca" class="block text-sm font-medium text-gray-700">Marca</label>
                             <select id="filterMarca" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50"></select>
+                        </div>
+                        <div>
+                            <label for="filterCategoria" class="block text-sm font-medium text-gray-700">Categoría</label>
+                            <select id="filterCategoria" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
+                                <option value="">Todas</option>
+                                <option value="Tenis">Tenis</option>
+                                <option value="Ropa">Ropa</option>
+                                <option value="Accesorios">Accesorios</option>
+                            </select>
                         </div>
                         <div>
                             <label for="filterGenero" class="block text-sm font-medium text-gray-700">Género</label>
@@ -339,7 +348,7 @@
     <!-- Modals -->
     <div id="inventarioModal" class="modal fixed inset-0 bg-gray-900 bg-opacity-50 hidden items-center justify-center p-4 z-40">
         <div class="modal-content bg-white rounded-lg shadow-xl w-full max-w-lg p-6 transform scale-95">
-            <h3 id="inventarioModalTitle" class="text-xl font-bold mb-4">Agregar Tenis al Inventario</h3>
+            <h3 id="inventarioModalTitle" class="text-xl font-bold mb-4">Agregar Producto al Inventario</h3>
             <form id="inventarioForm">
                 <input type="hidden" id="inventarioId">
                 <div class="space-y-4">
@@ -348,7 +357,13 @@
                         <datalist id="marcasList"></datalist>
                         <input type="text" id="inventarioModelo" placeholder="Modelo (Ej. AIR FORCE 1)" class="w-full p-3 border border-gray-300 rounded-lg uppercase" required>
                     </div>
-<input type="text" id="inventarioSku" placeholder="Código SKU" class="w-full p-3 border border-gray-300 rounded-lg uppercase">
+                    <input type="text" id="inventarioSku" placeholder="Código SKU" class="w-full p-3 border border-gray-300 rounded-lg uppercase">
+                    <select id="inventarioCategoria" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                        <option value="" disabled selected>Categoría...</option>
+                        <option value="Tenis">Tenis</option>
+                        <option value="Ropa">Ropa</option>
+                        <option value="Accesorios">Accesorios</option>
+                    </select>
                     <div class="flex items-center space-x-2">
                         <input type="text" id="inventarioTalla" placeholder="Talla" class="w-full p-3 border border-gray-300 rounded-lg uppercase" required>
                         <select id="inventarioTallaTipo" class="w-full p-3 border border-gray-300 rounded-lg" required>
@@ -390,7 +405,7 @@
                 </div>
                 <div class="flex justify-end mt-6 space-x-3">
                     <button type="button" class="closeModalBtn px-4 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300">Cancelar</button>
-                    <button type="submit" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">Guardar Tenis</button>
+                    <button type="submit" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">Guardar Producto</button>
                 </div>
             </form>
         </div>
