--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div id="login-screen" class="fixed inset-0 bg-gray-100 z-40 flex items-center justify-center hidden">
         <div class="text-center p-8 bg-white shadow-2xl rounded-xl max-w-sm w-full">
              <img src="logo.png" alt="Logotipo" class="w-24 h-24 mx-auto mb-4" onerror="this.onerror=null;this.src='https://placehold.co/96x96/e2e8f0/64748b?text=Logo';">
-            <h1 class="text-2xl font-bold text-gray-800 mt-4">Venta de Tenis</h1>
-            <p class="text-gray-500 mb-8">  Carmen y Juan Ramón</p>
+            <h1 class="text-2xl font-bold text-gray-800 mt-4">Tenis Chidos</h1>
+            
             <button id="loginBtn" class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-4 rounded-lg shadow-md flex items-center justify-center transition-colors">
                 <i class="fab fa-google text-xl mr-3"></i>
                 Acceder con Google
@@ -70,8 +70,8 @@
                 <div class="flex items-center space-x-4">
                     <img src="logo.png" alt="Logotipo" class="w-16 h-16 object-contain" onerror="this.onerror=null;this.src='https://placehold.co/64x64/e2e8f0/64748b?text=Logo';">
                     <div>
-                        <h1 class="text-3xl font-bold text-gray-900">Venta de Tenis</h1>
-                        <p class="text-base text-gray-500">Carmen y Juan Ramón</p>
+                        <h1 class="text-3xl font-bold text-gray-900">Tenis Chidos</h1>
+                        
                     </div>
                 </div>
                 <div id="user-info" class="mt-4 md:mt-0 text-sm p-2 rounded-lg flex items-center space-x-3 bg-white shadow-sm border">
