Add CSV export feature in Finanzas

--- a/index.html
+++ b/index.html
@@ -341,6 +341,15 @@
                             <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center"><i class="fas fa-dolly text-indigo-500 mr-3"></i>Acciones de Caja</h3>
                             <div id="caja-actions" class="space-y-4"></div>
                         </div>
+                        <div class="bg-white p-6 rounded-xl shadow-md border">
+                            <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center"><i class="fas fa-file-csv text-green-500 mr-3"></i>Exportar Datos</h3>
+                            <div class="grid gap-2">
+                                <button id="exportClientesBtn" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-users mr-2"></i>Clientes</button>
+                                <button id="exportInventarioBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-box-open mr-2"></i>Inventario</button>
+                                <button id="exportVentasBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-shopping-cart mr-2"></i>Ventas</button>
+                                <button id="exportAbonosBtn" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-coins mr-2"></i>Abonos</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
