Add backup and restore utilities

--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
                                 <button id="exportInventarioBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-box-open mr-2"></i>Inventario</button>
                                 <button id="exportVentasBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-shopping-cart mr-2"></i>Ventas</button>
                                 <button id="exportAbonosBtn" class="w-full bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-coins mr-2"></i>Abonos</button>
+                                <button id="backupDbBtn" class="w-full bg-amber-600 hover:bg-amber-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-database mr-2"></i>Respaldar Base de Datos</button>
+                                <button id="restoreDbBtn" class="w-full bg-amber-700 hover:bg-amber-800 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-upload mr-2"></i>Restaurar Base de Datos</button>
+                                <input type="file" id="restoreFileInput" accept="application/json" class="hidden">
                             </div>
                         </div>
                     </div>
