Fix export data container placement

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center"><i class="fas fa-dolly text-indigo-500 mr-3"></i>Acciones de Caja</h3>
                             <div id="caja-actions" class="space-y-4"></div>
                         </div>
-                        <div class="bg-white p-6 rounded-xl shadow-md border">
+                        <div id="export-data-section" class="bg-white p-6 rounded-xl shadow-md border hidden">
                             <h3 class="text-xl font-bold text-gray-800 mb-4 flex items-center"><i class="fas fa-file-csv text-green-500 mr-3"></i>Exportar Datos</h3>
                             <div class="grid gap-2">
                                 <button id="exportClientesBtn" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-2 px-4 rounded-lg"><i class="fas fa-users mr-2"></i>Clientes</button>
