--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
     </header>
 
     <main class="max-w-7xl mx-auto p-4">
+      <img
+        src="banner.jpg"
+        alt="Banner"
+        class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow mb-6"
+        onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
+      />
+      <h2 class="text-3xl font-bold text-center mb-6">¡Los tenis más chidos están aquí!</h2>
+
+      <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
+        <input
+          id="searchInput"
+          type="text"
+          placeholder="Buscar por marca, modelo o SKU..."
+          class="flex-1 p-2 border rounded"
+        />
+        <select id="sortSelect" class="p-2 border rounded md:w-56">
+          <option value="">Ordenar por</option>
+          <option value="precio-asc">Precio: Menor a Mayor</option>
+          <option value="precio-desc">Precio: Mayor a Menor</option>
+        </select>
+      </div>
+
       <div id="categoryFilters" class="flex flex-wrap gap-2 mb-4">
         <button
           data-cat=""
@@ -49,6 +71,26 @@
         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
       ></div>
     </main>
+
+    <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 hidden items-center justify-center z-50">
+      <img src="" alt="Vista ampliada" class="max-w-full max-h-full" />
+    </div>
+
+    <a
+      href="https://wa.me/5214491952828?text=Informaci%C3%B3n%20sobre%20los%20Tenis%20Chidos"
+      target="_blank"
+      class="fixed bottom-20 right-4 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg flex items-center justify-center"
+      aria-label="Información sobre los Tenis Chidos"
+    >
+      <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
+    <button
+      id="scrollTopBtn"
+      class="fixed bottom-4 right-4 bg-indigo-600 hover:bg-indigo-700 text-white p-3 rounded-full shadow-lg hidden"
+      aria-label="Volver Arriba"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
 
     <script type="module" src="js/public.js"></script>
   </body>
