--- a/admin.html
+++ b/admin.html
@@ -788,8 +788,9 @@
               required
             >
               <option value="" disabled selected>Material Principal...</option>
-              <option value="Gamuza">Gamuza</option>
               <option value="Piel">Piel</option>
+              <option value="Gamuza">Gamuza</option>
+              <option value="Sintético">Sintético</option>
               <option value="Tela">Tela</option>
             </select>
             <div>
