--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
+    />
   </head>
   <body class="font-[Inter] bg-gray-100 text-gray-800">
     <header class="bg-white shadow">
@@ -42,7 +46,9 @@
         class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow mb-6"
         onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
       />
-      <h2 class="text-3xl font-bold text-center mb-6">¡Los tenis más chidos están aquí!</h2>
+      <h2 class="text-3xl font-bold text-center mb-6">
+        ¡Los tenis más chidos están aquí!
+      </h2>
 
       <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
         <input
@@ -72,10 +78,6 @@
       ></div>
     </main>
 
-    <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 hidden items-center justify-center z-50">
-      <img src="" alt="Vista ampliada" class="max-w-full max-h-full" />
-    </div>
-
     <a
       href="https://wa.me/5214491952828?text=Informaci%C3%B3n%20sobre%20los%20Tenis%20Chidos"
       target="_blank"
@@ -93,5 +95,6 @@
     </button>
 
     <script type="module" src="js/public.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
   </body>
 </html>
