--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           id="loginPublicBtn"
           class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-4 py-2 rounded-lg flex items-center"
         >
-          <i class="fab fa-google mr-2"></i>Acceder con Google
+          <i class="fab fa-google mr-2"></i>Login
         </button>
       </div>
     </header>
