Improve UI: centered modal, matching buttons, add footer

--- a/index.html
+++ b/index.html
@@ -72,25 +72,40 @@
       ></div>
     </main>
 
-    <div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 hidden items-center justify-center z-50">
+    <div
+      id="imageModal"
+      class="fixed inset-0 bg-black bg-opacity-75 hidden flex items-center justify-center z-50"
+    >
       <img src="" alt="Vista ampliada" class="max-w-full max-h-full" />
     </div>
 
     <a
       href="https://wa.me/5214491952828?text=Informaci%C3%B3n%20sobre%20los%20Tenis%20Chidos"
       target="_blank"
-      class="fixed bottom-20 right-4 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg flex items-center justify-center"
+      class="fixed bottom-20 right-4 bg-green-500 hover:bg-green-600 text-white w-14 h-14 rounded-full shadow-2xl flex items-center justify-center"
       aria-label="Información sobre los Tenis Chidos"
     >
       <i class="fab fa-whatsapp text-2xl"></i>
     </a>
     <button
       id="scrollTopBtn"
-      class="fixed bottom-4 right-4 bg-indigo-600 hover:bg-indigo-700 text-white p-3 rounded-full shadow-lg hidden"
+      class="fixed bottom-4 right-4 bg-indigo-600 hover:bg-indigo-700 text-white w-14 h-14 rounded-full shadow-2xl hidden flex items-center justify-center"
       aria-label="Volver Arriba"
     >
       <i class="fas fa-arrow-up"></i>
     </button>
+
+    <footer class="bg-white text-center p-4 mt-8 shadow-inner">
+      <p><strong>WhatsApp:</strong> (449) 195 2828</p>
+      <p>
+        <strong>Correo:</strong>
+        <a href="mailto:carmen@tenischidos.xyz" class="text-blue-600 hover:underline">carmen@tenischidos.xyz</a>
+      </p>
+      <p>
+        <strong>WEB:</strong>
+        <a href="https://www.tenischidos.xyz" class="text-blue-600 hover:underline">www.tenischidos.xyz</a>
+      </p>
+    </footer>
 
     <script type="module" src="js/public.js"></script>
   </body>
