--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow mb-6"
         onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
       />
-      <h2 class="text-3xl font-bold text-center mb-6">¡Los tenis más chidos están aquí!</h2>
+      <h2 class="text-3xl font-bold text-center mb-6">¡Los tenis más chidos!</h2>
 
       <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
         <input
