mostrar-filtro-todos-y-orden-desc

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <select id="sortSelect" class="p-2 border rounded md:w-56">
           <option value="">Ordenar por</option>
           <option value="precio-asc">Precio: Menor a Mayor</option>
-          <option value="precio-desc">Precio: Mayor a Menor</option>
+          <option value="precio-desc" selected>Precio: Mayor a Menor</option>
         </select>
       </div>
 
