--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-pdfmake/2.1.2/html-to-pdfmake.min.js"></script>
+    <script src="js/vendor/html-to-pdfmake.min.js"></script>
     <style>
       body {
         font-family: 'Inter', sans-serif;
