--- a/admin.html
+++ b/admin.html
@@ -841,6 +841,25 @@
                 required
               />
             </div>
+            <div class="flex items-center space-x-2 mt-2">
+              <input
+                type="checkbox"
+                id="inventarioDescuentoActivo"
+                class="h-4 w-4"
+              />
+              <label for="inventarioDescuentoActivo" class="text-sm"
+                >Activar Descuento</label
+              >
+              <input
+                type="number"
+                step="0.01"
+                min="0"
+                max="100"
+                id="inventarioPorcentajeDescuento"
+                placeholder="%"
+                class="w-20 p-2 border border-gray-300 rounded-lg"
+              />
+            </div>
           </div>
           <div class="flex justify-end mt-6 space-x-3">
             <button
