--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Catálogo en línea con los modelos más recientes de Tenis Chidos"
+    />
     <title>Tenis Chidos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
@@ -13,55 +17,90 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <style>
+      /* Simple skeleton loader */
+      .skeleton-card div {
+        background-color: #e5e7eb;
+        border-radius: 0.375rem;
+        height: 0.75rem;
+      }
+    </style>
   </head>
   <body class="font-[Inter] bg-gray-100 text-gray-800">
-    <header class="bg-white shadow">
-      <div class="max-w-7xl mx-auto p-4 flex justify-between items-center">
-        <div class="flex items-center gap-2">
+    <header class="bg-white shadow-sm sticky top-0 z-10">
+      <div
+        class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center"
+      >
+        <div class="flex items-center gap-3">
           <img
             src="logo.png"
             alt="Logo"
-            class="w-12 h-12 object-contain"
-            onerror="this.onerror=null;this.src='https://placehold.co/48x48?text=Logo';"
+            class="w-10 h-10 object-contain"
+            onerror="this.onerror=null;this.src='https://placehold.co/40x40?text=Logo';"
           />
-          <h1 class="text-2xl font-bold">Tenis Chidos</h1>
+          <div>
+            <h1 class="text-lg font-bold leading-tight">Tenis Chidos</h1>
+            <p class="text-xs text-gray-500 leading-none">
+              Calzado y accesorios
+            </p>
+          </div>
         </div>
         <button
           id="loginPublicBtn"
-          class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-4 py-2 rounded-lg flex items-center"
+          class="inline-flex items-center gap-2 bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-medium px-4 py-2 rounded-lg"
         >
-          <i class="fab fa-google mr-2"></i>Login
+          <i class="fab fa-google"></i>
+          Acceso
         </button>
       </div>
     </header>
 
     <main class="max-w-7xl mx-auto p-4">
-      <img
-        src="banner.jpg"
-        alt="Banner"
-        class="w-full h-auto max-h-48 md:max-h-96 object-contain rounded-xl shadow mb-6"
-        onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
-      />
-      <h2 class="text-3xl font-bold text-center mb-6">¡Los tenis más chidos!</h2>
+      <section class="relative mb-8">
+        <img
+          src="banner.jpg"
+          alt="Banner"
+          class="w-full h-60 md:h-80 object-cover rounded-xl shadow"
+          onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
+        />
+        <div
+          class="absolute inset-0 bg-black/40 rounded-xl flex flex-col items-center justify-center text-center text-white p-4"
+        >
+          <h2 class="text-3xl md:text-4xl font-bold mb-2">
+            ¡Los tenis más chidos!
+          </h2>
+          <p class="text-sm md:text-base">
+            Descubre nuestro catálogo actualizado
+          </p>
+        </div>
+      </section>
 
       <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
-        <input
-          id="searchInput"
-          type="text"
-          placeholder="Buscar por marca, modelo o SKU..."
-          class="flex-1 p-2 border rounded"
-        />
-        <select id="sortSelect" class="p-2 border rounded md:w-56">
+        <div class="relative flex-1">
+          <input
+            id="searchInput"
+            type="text"
+            placeholder="Buscar por marca, modelo o SKU..."
+            class="w-full p-2 pl-9 border rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+          />
+          <i
+            class="fas fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"
+          ></i>
+        </div>
+        <select id="sortSelect" class="p-2 border rounded-lg md:w-56 shadow-sm">
           <option value="">Ordenar por</option>
           <option value="precio-asc">Precio: Menor a Mayor</option>
           <option value="precio-desc" selected>Precio: Mayor a Menor</option>
         </select>
       </div>
 
-      <div id="categoryFilters" class="flex flex-wrap gap-2 mb-4">
+      <div
+        id="categoryFilters"
+        class="flex flex-wrap gap-2 mb-4 overflow-x-auto py-1"
+      >
         <button
           data-cat=""
-          class="cat-btn bg-indigo-600 text-white px-3 py-1 rounded-full"
+          class="cat-btn bg-indigo-600 text-white px-3 py-1 rounded-full focus:outline-none focus:ring-2 focus:ring-indigo-500"
         >
           Todos
         </button>
@@ -122,11 +161,19 @@
       <p><strong>WhatsApp:</strong> (449) 195 2828</p>
       <p>
         <strong>Correo:</strong>
-        <a href="mailto:carmen@tenischidos.xyz" class="text-blue-600 hover:underline">carmen@tenischidos.xyz</a>
+        <a
+          href="mailto:carmen@tenischidos.xyz"
+          class="text-blue-600 hover:underline"
+          >carmen@tenischidos.xyz</a
+        >
       </p>
       <p>
         <strong>WEB:</strong>
-        <a href="https://www.tenischidos.xyz" class="text-blue-600 hover:underline">www.tenischidos.xyz</a>
+        <a
+          href="https://www.tenischidos.xyz"
+          class="text-blue-600 hover:underline"
+          >www.tenischidos.xyz</a
+        >
       </p>
     </footer>
 
