--- a/index.html
+++ b/index.html
@@ -60,19 +60,9 @@
         <img
           src="banner.jpg"
           alt="Banner"
-          class="w-full h-60 md:h-80 object-cover rounded-xl shadow"
+          class="w-full rounded-xl shadow"
           onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg';"
         />
-        <div
-          class="absolute inset-0 bg-black/40 rounded-xl flex flex-col items-center justify-center text-center text-white p-4"
-        >
-          <h2 class="text-3xl md:text-4xl font-bold mb-2">
-            ¡Los tenis más chidos!
-          </h2>
-          <p class="text-sm md:text-base">
-            Descubre nuestro catálogo actualizado
-          </p>
-        </div>
       </section>
 
       <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
