--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="js/vendor/html-to-pdfmake.min.js"></script>
     <style>
       /* Simple skeleton loader */
       .skeleton-card div {
@@ -65,6 +68,12 @@
         />
       </section>
 
+      <div class="text-center mb-4">
+        <button id="downloadCatalogBtn" class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded-lg shadow-md inline-flex items-center gap-2">
+          <i class="fas fa-file-pdf"></i>
+          Catálogo PDF
+        </button>
+      </div>
       <div class="flex flex-col md:flex-row gap-2 mb-4 items-stretch">
         <div class="relative flex-1">
           <input
