--- a/admin.html
+++ b/admin.html
@@ -673,6 +673,12 @@
                     <i class="fas fa-coins mr-2"></i>Abonos
                   </button>
                   <button
+                    id="updatePublicInventoryBtn"
+                    class="w-full bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded-lg"
+                  >
+                    <i class="fas fa-sync-alt mr-2"></i>Actualizar Inventario Público
+                  </button>
+                  <button
                     id="backupDbBtn"
                     class="w-full bg-amber-600 hover:bg-amber-700 text-white font-bold py-2 px-4 rounded-lg"
                   >
