--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,8 @@
       }
       .modal-content {
         transition: transform 0.3s ease;
+        max-height: 90vh;
+        overflow-y: auto;
       }
       .search-clear-btn {
         position: absolute;
