Add Numero de Modelo field

--- a/admin.html
+++ b/admin.html
@@ -737,6 +737,12 @@
                 class="w-full p-3 border border-gray-300 rounded-lg uppercase"
                 required
               />
+              <input
+                type="text"
+                id="inventarioNumeroModelo"
+                placeholder="Nº de Modelo"
+                class="w-full p-3 border border-gray-300 rounded-lg uppercase"
+              />
             </div>
             <input
               type="text"
