feat: allow removing product photo

--- a/admin.html
+++ b/admin.html
@@ -829,6 +829,13 @@
             accept="image/*"
             class="w-full p-3 border border-gray-300 rounded-lg"
           />
+          <button
+            type="button"
+            id="removeFotoBtn"
+            class="mt-2 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700"
+          >
+            Eliminar Foto
+          </button>
             <div class="flex space-x-4">
               <input
                 type="number"
