Add promotional section below carousel

--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
           <i class="fas fa-chevron-right"></i>
         </button>
       </div>
+      <section class="bg-white rounded-xl shadow-2xl p-4 mb-4">
+        <p class="text-justify">
+          Explora cada modelo y siéntete libre de elegir el que mejor combine con tu estilo.
+          Nuestros productos están pensados para acompañarte en cada aventura con toda la comodidad y resistencia que buscas.
+          Si quieres adquirirlos o resolver alguna duda, envíanos un mensaje por el botón de WhatsApp y tendrás una atención personalizada.
+        </p>
+      </section>
       <div
         id="productsContainer"
         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
