Reduce width of discount percentage input

--- a/admin.html
+++ b/admin.html
@@ -862,7 +862,7 @@
               max="100"
               id="inventarioPorcentajeDescuento"
               placeholder="%"
-              class="w-full p-2 border border-gray-300 rounded-lg"
+              class="w-24 p-2 border border-gray-300 rounded-lg"
             />
           </div>
           </div>
