style: keep contact section width consistent

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <section id="contacto" class="bg-white rounded-xl shadow-2xl p-4 mt-8 mb-4">
+    <section id="contacto" class="max-w-7xl mx-auto bg-white rounded-xl shadow-2xl p-4 mt-8 mb-4">
       <h2 class="text-xl font-bold mb-2">Contacto</h2>
       <p class="text-justify">
         ¿Buscas un modelo en especial? Escríbenos por WhatsApp con el modelo, talla y colores que deseas y con gusto lo encontraremos para ti.
