--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
       <section class="bg-white rounded-xl shadow-2xl p-4 mb-4">
         <p class="text-justify">
-          Explora cada modelo y siéntete libre de elegir el que mejor combine con tu estilo.
           Nuestros productos están pensados para acompañarte en cada aventura con toda la comodidad y resistencia que buscas.
-          Si quieres adquirirlos o resolver alguna duda, envíanos un mensaje por el botón de WhatsApp y tendrás una atención personalizada.
+          Si quieres adquirirlos o resolver alguna duda ó buscas un modelo en especial, Escríbenos por WhatsApp con el modelo, talla y colores que deseas y con gusto lo encontraremos para ti.
+          envíanos un mensaje y tendrás una atención personalizada.
         </p>
       </section>
       <div class="text-center mb-4">
