--- a/migrar.html
+++ b/migrar.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Migrador Firebase A ➜ B</title>
+  <title>Migrador Firestore A ➜ B</title>
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore-compat.js"></script>
 </head>
@@ -12,38 +12,45 @@
   <pre id="log" style="margin-top:20px; background:#f4f4f4; padding:10px; max-height: 400px; overflow-y: auto;"></pre>
 
   <script>
-    // Proyecto A (cuenta personal)
-    const configA = {
-      apiKey: "AIzaSyCe_HbdWlApCldi2Rk8uituDIwr_RcjAqE",
-      authDomain: "tenis-1baf2.firebaseapp.com",
-      projectId: "tenis-1baf2",
-      storageBucket: "tenis-1baf2.firebasestorage.app",
-      messagingSenderId: "1063958178043",
-      appId: "1:1063958178043:web:01276f257cc083bac1285e",
-      measurementId: "G-XXEEL6LMND"
-    };
+    let dbA, dbB;
 
-    // Proyecto B (cuenta propia)
-    const configB = {
-      apiKey: "AIzaSyABlVZR55dbT8KfuEVbnxhquwWP0VbLBy4",
-      authDomain: "tenis-chidos-ags.firebaseapp.com",
-      projectId: "tenis-chidos-ags",
-      storageBucket: "tenis-chidos-ags.firebasestorage.app",
-      messagingSenderId: "13324233273",
-      appId: "1:13324233273:web:d7eb9f5a0e8ed0a4317be8"
-    };
+    function inicializarFirebase() {
+      // Configuración proyecto A
+      const configA = {
+        apiKey: "AIzaSyCe_HbdWlApCldi2Rk8uituDIwr_RcjAqE",
+        authDomain: "tenis-1baf2.firebaseapp.com",
+        projectId: "tenis-1baf2",
+        storageBucket: "tenis-1baf2.firebasestorage.app",
+        messagingSenderId: "1063958178043",
+        appId: "1:1063958178043:web:01276f257cc083bac1285e",
+        measurementId: "G-XXEEL6LMND"
+      };
 
-    const appA = firebase.initializeApp(configA, "appA");
-    const appB = firebase.initializeApp(configB, "appB");
+      // Configuración proyecto B
+      const configB = {
+        apiKey: "AIzaSyABlVZR55dbT8KfuEVbnxhquwWP0VbLBy4",
+        authDomain: "tenis-chidos-ags.firebaseapp.com",
+        projectId: "tenis-chidos-ags",
+        storageBucket: "tenis-chidos-ags.firebasestorage.app",
+        messagingSenderId: "13324233273",
+        appId: "1:13324233273:web:d7eb9f5a0e8ed0a4317be8"
+      };
 
-    const dbA = firebase.firestore(appA);
-    const dbB = firebase.firestore(appB);
+      const appA = firebase.initializeApp(configA, "appA");
+      const appB = firebase.initializeApp(configB, "appB");
+
+      dbA = firebase.firestore(appA);
+      dbB = firebase.firestore(appB);
+    }
 
     async function migrarDatos() {
       const log = document.getElementById("log");
       log.textContent = "⏳ Iniciando migración...\n";
 
       try {
+        // Inicializa las instancias antes de usarlas
+        inicializarFirebase();
+
         const colecciones = await dbA.listCollections();
 
         for (const col of colecciones) {
