--- a/migrar.html
+++ b/migrar.html
@@ -2,110 +2,92 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Migración Firestore A ➜ B</title>
+  <title>Migración Firestore A ➜ B v1.0.1</title>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore-compat.js"></script>
 </head>
 <body style="font-family: sans-serif; padding: 20px;">
-  <h2>Migración Firestore A ➜ B <span id="version" style="font-size: 0.8em; color: gray;"></span></h2>
-  <button id="migrarBtn">Iniciar migración</button>
+  <h2>Migración Firestore A ➜ B <span style="font-size: 0.8em; color: gray;">(v1.0.1)</span></h2>
+  <button onclick="migrarDatos()">Iniciar migración</button>
   <pre id="log" style="margin-top:20px; background:#f4f4f4; padding:10px; max-height: 500px; overflow-y: auto;"></pre>
 
-  <script type="module">
-    // 🔢 Versión del migrador
+  <script>
     const MIGRADOR_VERSION = "v1.0.1";
-    document.getElementById("version").textContent = `(${MIGRADOR_VERSION})`;
     document.title = `Migración Firestore A ➜ B ${MIGRADOR_VERSION}`;
 
-    // ✅ IMPORTS CORRECTOS usando .mjs
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-app.mjs";
-    import {
-      getFirestore,
-      collection,
-      getDocs,
-      doc,
-      setDoc,
-      listCollections,
-    } from "https://www.gstatic.com/firebasejs/9.24.0/firebase-firestore.mjs";
+    let dbA, dbB;
 
-    const log = document.getElementById("log");
+    function inicializarFirebase() {
+      const configA = {
+        apiKey: "AIzaSyCe_HbdWlApCldi2Rk8uituDIwr_RcjAqE",
+        authDomain: "tenis-1baf2.firebaseapp.com",
+        projectId: "tenis-1baf2",
+        storageBucket: "tenis-1baf2.firebasestorage.app",
+        messagingSenderId: "1063958178043",
+        appId: "1:1063958178043:web:01276f257cc083bac1285e",
+        measurementId: "G-XXEEL6LMND"
+      };
 
-    // Configuración Proyecto A (cuenta personal)
-    const configA = {
-      apiKey: "AIzaSyCe_HbdWlApCldi2Rk8uituDIwr_RcjAqE",
-      authDomain: "tenis-1baf2.firebaseapp.com",
-      projectId: "tenis-1baf2",
-      storageBucket: "tenis-1baf2.firebasestorage.app",
-      messagingSenderId: "1063958178043",
-      appId: "1:1063958178043:web:01276f257cc083bac1285e",
-      measurementId: "G-XXEEL6LMND"
-    };
+      const configB = {
+        apiKey: "AIzaSyABlVZR55dbT8KfuEVbnxhquwWP0VbLBy4",
+        authDomain: "tenis-chidos-ags.firebaseapp.com",
+        projectId: "tenis-chidos-ags",
+        storageBucket: "tenis-chidos-ags.firebasestorage.app",
+        messagingSenderId: "13324233273",
+        appId: "1:13324233273:web:d7eb9f5a0e8ed0a4317be8"
+      };
 
-    // Configuración Proyecto B (cuenta propia)
-    const configB = {
-      apiKey: "AIzaSyABlVZR55dbT8KfuEVbnxhquwWP0VbLBy4",
-      authDomain: "tenis-chidos-ags.firebaseapp.com",
-      projectId: "tenis-chidos-ags",
-      storageBucket: "tenis-chidos-ags.firebasestorage.app",
-      messagingSenderId: "13324233273",
-      appId: "1:13324233273:web:d7eb9f5a0e8ed0a4317be8"
-    };
+      const appA = firebase.initializeApp(configA, "appA");
+      const appB = firebase.initializeApp(configB, "appB");
 
-    // Inicializar ambas apps
-    const appA = initializeApp(configA, "appA");
-    const appB = initializeApp(configB, "appB");
-
-    const dbA = getFirestore(appA);
-    const dbB = getFirestore(appB);
-
-    // Función para imprimir líneas en el log
-    function logLinea(texto) {
-      log.textContent += texto + "\n";
+      dbA = firebase.firestore(appA);
+      dbB = firebase.firestore(appB);
     }
 
-    // Función recursiva para migrar colecciones y subcolecciones
+    function logLinea(texto) {
+      document.getElementById("log").textContent += texto + "\n";
+    }
+
     async function migrarColeccion(path, refA, refB) {
-      const snap = await getDocs(refA);
-      for (const docSnap of snap.docs) {
+      const snapshot = await refA.get();
+      for (const docSnap of snapshot.docs) {
         const data = docSnap.data();
-        const docRefB = doc(refB, docSnap.id);
-        await setDoc(docRefB, data);
+        const refDocB = refB.doc(docSnap.id);
+        await refDocB.set(data);
         logLinea(`✔ Migrado: ${path}/${docSnap.id}`);
 
-        // Subcolecciones recursivas
-        const subcols = await listCollections(docSnap.ref);
+        const subcols = await docSnap.ref.listCollections();
         for (const subcol of subcols) {
           const subcolName = subcol.id;
           const nuevaRuta = `${path}/${docSnap.id}/${subcolName}`;
           logLinea(`📁 Subcolección: ${nuevaRuta}`);
           await migrarColeccion(
             nuevaRuta,
-            collection(docSnap.ref, subcolName),
-            collection(docRefB, subcolName)
+            docSnap.ref.collection(subcolName),
+            refDocB.collection(subcolName)
           );
         }
       }
     }
 
-    // Función principal de migración
     async function migrarDatos() {
-      log.textContent = `🛠 Migrador Firestore ${MIGRADOR_VERSION} iniciado...\n`;
+      document.getElementById("log").textContent = `🛠 Migrador Firestore v1.0.1 iniciado...\n`;
 
       try {
-        const colecciones = await listCollections(dbA);
+        inicializarFirebase();
+        const colecciones = await dbA.listCollections();
 
         for (const col of colecciones) {
           const colName = col.id;
           logLinea(`📁 Colección raíz: ${colName}`);
-          await migrarColeccion(colName, collection(dbA, colName), collection(dbB, colName));
+          await migrarColeccion(colName, dbA.collection(colName), dbB.collection(colName));
         }
 
-        logLinea(`\n✅ Migración COMPLETA con éxito. (${MIGRADOR_VERSION})`);
+        logLinea(`\n✅ Migración COMPLETA con éxito. (v1.0.1)`);
       } catch (error) {
         logLinea(`❌ Error: ${error.message}`);
       }
     }
-
-    // Botón de acción
-    document.getElementById("migrarBtn").addEventListener("click", migrarDatos);
   </script>
 </body>
 </html>
